--- a/src/renderer/src/assets/styles/Omp.css
+++ b/src/renderer/src/assets/styles/Omp.css
@@ -3,6 +3,8 @@
   padding: 15px;
   border: 2px solid darkorange;
   margin-top: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
   justify-content: space-between;
   align-items: center;
 }
