--- a/src/renderer/src/assets/styles/Modal.css
+++ b/src/renderer/src/assets/styles/Modal.css
@@ -26,3 +26,78 @@
   display: flex;
   justify-content: space-between;
 }
+
+.confirm-button {
+  background-color: #000000;
+  border: 1px solid darkgreen;
+  color: darkgreen;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  width: 100%;
+  height: 47px;
+  line-height: 17px;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+.confirm-button:active {
+  background-color: darkgreen;
+  color: #FFFFFF;
+}
+
+.confirm-button:hover {
+  background-color: darkgreen;
+  color: #FFFFFF;
+}
+
+.deny-button {
+  background-color: #000000;
+  border: 1px solid darkred;
+  color: darkred;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  width: 100%;
+  height: 47px;
+  line-height: 17px;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+.deny-button:active {
+  background-color: darkred;
+  color: #FFFFFF;
+}
+
+.deny-button:hover {
+  background-color: darkred;
+  color: #FFFFFF;
+}
+
+.change-button {
+  background-color: #000000;
+  border: 1px solid #F05A27;
+  color: #F05A27;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  width: 100%;
+  height: 47px;
+  line-height: 17px;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+.deny-button:active {
+  background-color: #F05A27;
+  color: #FFFFFF;
+}
+
+.deny-button:hover {
+  background-color: #F05A27;
+  color: #FFFFFF;
+}
