--- a/src/renderer/src/assets/styles/Modal.css
+++ b/src/renderer/src/assets/styles/Modal.css
@@ -101,3 +101,28 @@
   background-color: #F05A27;
   color: #FFFFFF;
 }
+
+.change-button {
+  background-color: #000000;
+  border: 1px solid #F05A27;
+  color: #F05A27;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  width: 100%;
+  height: 47px;
+  line-height: 17px;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+.change-button:active {
+  background-color: #F05A27;
+  color: #FFFFFF;
+}
+
+.change-button:hover {
+  background-color: #F05A27;
+  color: #FFFFFF;
+}
